src/objects/Amr_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Final_Cost_CA_Euro_Amount__c</fullName>
        <label>Accepted Final Cost - CA(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_CA_Local_Amount__c</fullName>
        <label>Accepted Final Cost - CA(Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_CA_only_Currency__c</fullName>
        <label>Accepted Final Cost -CA(Currency Amount)</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_Editors_name__c</fullName>
        <label>Accepted Final Cost - Editors name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PC_Euro_Amou__c</fullName>
        <label>Accepted Final Cost - PC(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PC_only_Currency__c</fullName>
        <label>Accepted Final Cost-PC(Currency Amount)</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PC_only_Local_Amo__c</fullName>
        <label>Accepted Final Cost - PC (Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PPC_Euro_Amount__c</fullName>
        <label>Accepted Final Cost - PPC(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PPC_only_Currency__c</fullName>
        <label>Accepted Final Cost-PPC(Currency amount)</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_PPC_only_Local_Am__c</fullName>
        <label>Accepted Final Cost - PPC(Local Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_Sound_Studio_Name__c</fullName>
        <label>Accepted Final Cost - Sound Studio Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_Total_Sound_Studio__c</fullName>
        <label>Accepted Final Cost - Total Sound Studio</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_Total_editing_cost__c</fullName>
        <label>Accepted Final Cost - Total editing cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_Travel_Costs__c</fullName>
        <label>Accepted Final Cost - Travel Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Final_Cost_props_wardrobe__c</fullName>
        <label>Accepted Final Cost-props&amp; wardrobe</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_total_opening_quotes__c</fullName>
        <label>Average total opening quotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Additional_agency_Name__c</fullName>
        <label>CA/Additional agency Name</label>
        <picklist>
            <picklistValues>
                <fullName>BBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ogilvy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CA_Costs_Euro_Amount__c</fullName>
        <label>CA Costs(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Location__c</fullName>
        <label>CA Location</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Master__c</fullName>
        <label>Cost Per Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_master_per_shoot_day__c</fullName>
        <label>Cost per master per shoot day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <label>Folder</label>
        <picklist>
            <picklistValues>
                <fullName>Opening Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Quotes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PC_part_of_the_Roster__c</fullName>
        <label>Is PC part of the Roster ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_PPC_part_of_the_Roster__c</fullName>
        <label>Is PPC part of the Roster?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Amount_of_CA__c</fullName>
        <label>Local Amount of CA</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Amount_of_PC__c</fullName>
        <label>Local Amount of PC</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Amount_of_PPC__c</fullName>
        <label>Local Amount of PPC</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency_of_CA_Costs__c</fullName>
        <label>Local Currency of CA Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Currency_of_PC_Costs__c</fullName>
        <label>Local Currency of PC Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Currency_of_PPC_Costs__c</fullName>
        <label>Local Currency of PPC Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ber $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boliviano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFA Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Krone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuerte (Parallel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Cordoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK $</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_Costs_Euro_Amount__c</fullName>
        <label>PC Costs (Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Country__c</fullName>
        <label>PC Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PC_name__c</fullName>
        <label>PC name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Costs_Euro_Amount__c</fullName>
        <label>PPC Costs(Euro Amount)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>